# ai-game

./: .gitignore  Cargo.toml  README.md  game.db
game/: Cargo.toml  build.rs  koboldcpp.json
game/src/: kobold_api.rs  main.rs
game/src/ai/: convo.rs  generator.rs  logic.rs  mod.rs
game/src/ai/gbnf/: events.rs
game/src/ai/prompts/: event_instructions.rs  parsing_prompts.rs  tables.rs
game/src/commands/: builtins.rs  converter.rs  mod.rs
game/src/db/: mod.rs  queries.rs
game/src/models/: commands.rs
game/src/models/world/: items.rs  mod.rs  raw.rs
gbnf/: Cargo.toml
gbnf/src/: lib.rs
gbnf_derive/: Cargo.toml
gbnf_derive/src/: lib.rs
src/: game_loop.rs  io.rs  main.rs  state.rs
src/ai/: coherence.rs  generator.rs  logic.rs  mod.rs
src/ai/gbnf/: mod.rs
src/ai/prompts/: execution_prompts.rs  mod.rs  parsing_prompts.rs  world_prompts.rs
src/commands/: builtins.rs  coherence.rs  converter.rs  mod.rs
src/db/: mod.rs  queries.rs
src/models/: commands.rs  mod.rs
src/models/coherence/: mod.rs
src/models/world/: items.rs  people.rs  scenes.rs
